objects/PurchaseAgreement__c.object
<CustomObject>
    <fields>
        <fullName>Agreement_Date__c</fullName>
        <description>Date of signing</description>
        <label>Agreement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Buyer</description>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>PurchaseAgreements</relationshipLabel>
        <relationshipName>PurchaseAgreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FVehicles__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Purchased vehicle</description>
        <label>FVehicles</label>
        <referenceTo>FVehicles__c</referenceTo>
        <relationshipLabel>PurchaseAgreements</relationshipLabel>
        <relationshipName>PurchaseAgreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Final_Amount__c</fullName>
        <description>Final agreed price</description>
        <label>Final Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related sales opportunity</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>PurchaseAgreements</relationshipLabel>
        <relationshipName>PurchaseAgreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Lease</fullName>
                </value>
                <value>
                    <fullName>Loan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Terms__c</fullName>
        <description>Legal terms and conditions</description>
        <label>Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>PurchaseAgreement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PurchaseAgreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PurchaseAgreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>